--- a/RepositoryService/build.gradle
+++ b/RepositoryService/build.gradle
@@ -1,11 +1,16 @@
 plugins {
+    id("org.springframework.boot") version "2.1.6.RELEASE"
+    id("io.spring.dependency-management") version "1.0.7.RELEASE"
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
 }
 
 version 'unspecified'
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation("org.springframework.boot:spring-boot-starter")
+    implementation("org.springframework.boot:spring-boot-starter-activemq")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation("com.fasterxml.jackson.core:jackson-databind")
 }
 
 compileKotlin {
